Fix overflow-x in navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,7 @@ body {
   background-color: var(--main-bg-color);
   font-family: 'Noto Sans', sans-serif;
   color: var(--main-body-color);
+  overflow-x: hidden;
 }
 
 p {
